now succesfully runs using install instructions

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,9 @@ package_dir =
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    importlib-metadata; python_version<"3.8"
+    importlib-metadata
+    pytest
+    pytest-cov
 
 
 [options.packages.find]
@@ -83,7 +85,7 @@ testing =
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this pytest issue.
 addopts =
-    --cov mats_orbitsimulator --cov-report term-missing
+#   --cov mats_orbitsimulator --cov-report term-missing
     --verbose
 norecursedirs =
     dist
